fix spacing

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
+    
     margin: 0;
     background-color: var(--black);
     color: #45a29da1;
@@ -157,7 +158,7 @@ section {
 }
 
 .about-section {
-    padding: 50px 20px;
+    padding: 70px 20px;
     position: relative;
 }
 
@@ -228,6 +229,7 @@ section {
 .projects-section {
     width: 90%;
     margin: 0 auto;
+    padding-top: 70px;
 }
 
 .projects-section .project {
@@ -269,6 +271,14 @@ section {
 .projects-section .project .links a:hover {
     color: var(--grey-color);
     transform: scale(1.2);
+}
+
+.contact-section {
+    padding: 70px;
+}
+
+.contact-text {
+    color: var(--grey-color);
 }
 
 .contact-section .contact-links {
